--- a/index3.html
+++ b/index3.html
@@ -4,26 +4,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230905113706"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230905113706"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@3?_v=20230905113706"></script>
-  <script src="https://unpkg.com/@swup/overlay-theme@2?_v=20230905113706"></script>
-  <script src="https://unpkg.com/@swup/fade-theme@2?_v=20230905113706"></script>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230907130302"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230907130302"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@3?_v=20230907130302"></script>
+  <script src="https://unpkg.com/@swup/fade-theme@2?_v=20230907130302"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230905113706"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230907130302"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
-  href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300;600;700&family=Italiana&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230905113706"
+  href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300;600;700&family=Italiana&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230907130302"
   rel="stylesheet">
 
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230905113706">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230907130302">
 
-  <link rel="stylesheet" href="css/style.min.css?_v=20230905113706"></link>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230907130302"></link>
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230905113706" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230907130302" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     
   
   <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
@@ -82,8 +81,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230905113706" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230905113706"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230907130302" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230907130302"></script> -->
 <body style="background-color: rgb(28, 28, 28)">
     <main id="swup" class="transition-fade">
       <div id="page" class="pagework page3" data-scroll-container>
@@ -298,8 +297,8 @@
         <div class="container">
           <div class="row justify-content-end align-items-center d-flex">
             <h2>About</h2>    
-            <div class="col-4 mob_off"></div>
-            <div class="col-4  mob_on justify-content-end align-items-center d-flex">
+            <div class="col-3 mob_off"></div>
+            <div class="col-6  mob_on justify-content-end align-items-center d-flex">
               <p>"Friesa" is a web design project with a focus on social functions. The goal of the project is to create a
                 platform that
                 brings people together to share their interests and connect with others who have similar passions. The website
@@ -308,7 +307,7 @@
                 the
                 community.</p>
             </div>
-            <div class="col-4 mob_off"></div>
+            <div class="col-3 mob_off"></div>
       
           </div>
         </div>
@@ -324,36 +323,30 @@
                               <li>
                                 Improve User Experience (UX):
                                 <ul><br>
-                                  <li>Make navigation more intuitive and user-friendly, allowing users to find information quickly.</li><br>
-                                  <li>Optimize interaction with website elements to enhance usability and reduce the likelihood of errors.</li><br>
-                                  <li>Ensure fast page loading and smooth interface performance to increase user satisfaction.</li><br>
+                                  <li>Make navigation more intuitive and user-friendly so users can find information quickly.</li><br>
+                                  <li>Optimize the interaction with site elements to increase usability and reduce the likelihood of errors.</li><br>
                                 </ul>
                               </li><br>
                               <li>
-                                Create an Attractive and Modern User Interface (UI):
+                                Create an attractive and modern user interface (UI):
                                 <ul><br>
-                                  <li>Develop a stylish and aesthetically appealing website design that aligns with the premium Aston Martin
-                                    brand.</li><br>
-                                  <li>Utilize modern design trends and elements to create a unique and memorable website appearance.</li><br>
+                                  <li>Develop a stylish and aesthetically pleasing website design that is comfortable for viewing content</li><br>
+                                  <li>Utilize current trends and design elements to create a unique and memorable website look and feel.</li><br>
                                 </ul>
                               </li><br>
                               <li>
-                                Increase Conversion:
+                                Increase conversion rates:
                                 <ul><br>
-                                  <li>Optimize page layouts based on conversion design principles to maximize successful user actions (e.g.,
-                                    orders,
-                                    inquiries, subscriptions).</li><br>
-                                  <li>Strengthen visual elements that attract attention and encourage users to take desired actions.</li>
+                                  <li>Optimize page layouts based on conversion design principles to maximize successful user actions. Recommendations, chats,
+                                  movie watching.</li><br>
+                                  <li>Enhance visual elements that grab attention and encourage users to browse.</li>
                                 </ul>
                               </li><br>
                               <li>
-                                Maintain Brand Identity:
+                                Build social features:
                                 <ul><br>
-                                  <li>ncorporate corporate colors, logo, and branding elements of Aston Martin to establish a consistent and
-                                    unified brand
-                                    perception on the website.</li><br>
-                                  <li>Highlight the premium characteristics of the brand and communicate its values through design and visual
-                                    effects.</li><br>
+                                  <li>Create a chat room, movie discussion thread.</li><br>
+                                  <li>Creating features that will help to engage people on this platform</li><br>
                                 </ul>
                               </li>
                             </ol>
@@ -685,8 +678,8 @@
 
 
 
-  <!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230905113706"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230905113706"></script> -->
+  <!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230907130302"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230907130302"></script> -->
 
 
 
@@ -697,16 +690,16 @@
 
 
 
-<script src="files/script /swup.js?_v=20230905113706"></script>
-<script src="files/script /fast-image-zoom.js?_v=20230905113706"></script>
+<script src="files/script /swup.js?_v=20230907130302"></script>
+<script src="files/script /fast-image-zoom.js?_v=20230907130302"></script>
 
-<script src="files/script /tilt.js?_v=20230905113706"></script>
-<script type="module" src="files/script /script.js?_v=20230905113706"></script>
+<script src="files/script /tilt.js?_v=20230907130302"></script>
+<script type="module" src="files/script /script.js?_v=20230907130302"></script>
 
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230905113706"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230907130302"
                 integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
                 crossorigin="anonymous"></script>
 </footer>
