--- a/index11.html
+++ b/index11.html
@@ -4,26 +4,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230905113706"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230905113706"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@3?_v=20230905113706"></script>
-  <script src="https://unpkg.com/@swup/overlay-theme@2?_v=20230905113706"></script>
-  <script src="https://unpkg.com/@swup/fade-theme@2?_v=20230905113706"></script>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230907130302"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230907130302"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@3?_v=20230907130302"></script>
+  <script src="https://unpkg.com/@swup/fade-theme@2?_v=20230907130302"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230905113706"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230907130302"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
-  href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300;600;700&family=Italiana&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230905113706"
+  href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300;600;700&family=Italiana&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230907130302"
   rel="stylesheet">
 
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230905113706">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230907130302">
 
-  <link rel="stylesheet" href="css/style.min.css?_v=20230905113706"></link>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230907130302"></link>
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230905113706" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230907130302" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     
   
   <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
@@ -82,8 +81,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230905113706" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230905113706"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230907130302" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230907130302"></script> -->
 
 <body style="background-color: rgb(28, 28, 28)">
   <main id="swup" class="transition-fade">
@@ -99,21 +98,7 @@
                 <h2 class="mob_off" style="font-size: 1.1rem; font-weight: 300;">BISNESS SITE</h2>
               </div>
               <div class="col-6 align-items-center info_up_box">
-                <h3 style="font-size: 0.6rem;">"Senator Barbershop" is a great web project dedicated to the barbershop.
-                  With its sleek
-                  and user-friendly interface, this website aims to provide a seamless and convenient platform for
-                  booking
-                  barber services. Emphasizing the artistry and skill of its barbers, "Senator Barbershop" showcases an
-                  impressive
-                  gallery
-                  of their outstanding work, allowing visitors to appreciate their talent and attention to detail. The
-                  platform's
-                  intuitive booking system creates a hassle-free experience, enabling customers to easily schedule
-                  appointments and
-                  select
-                  their preferred services. Through its visually captivating design and impressive functionality,
-                  "Senator Barbershop"
-                  serves as a captivating showcase of the modern barbershop experience.
+                <h3 style="font-size: 0.6rem;">"Ekfood" is a carefully developed design layout and website for a well-known company specializing in dairy products. The website design reflects the company's core values, emphasizes transparency and demonstrates the excellent quality of the dairy products offered. Within the site, we tried to give visitors a complete picture of the company itself, telling about its history, mission and values. In addition, we have given considerable space to detailed information about the wide range of exceptional dairy products offered by the company. This site serves as a gateway for customers to the world of dairy excellence that Ekfood is proud to represent.
                 </h3>
               </div>
               <div class="col-2 mob_off">
@@ -214,22 +199,16 @@
           <div class="container">
           <div class="row justify-content-end align-items-center d-flex">
             <h2>About</h2>
-            <div class="col-4 mob_off"></div>
-            <div class="col-4  mob_on justify-content-end align-items-center d-flex">
-              <p>"Senator Barbershop" is a great web project dedicated to the barbershop. With its sleek and
-                user-friendly interface,
-                this website aims to provide a seamless and convenient platform for booking
-                barber services. Emphasizing the artistry and skill of its barbers, "Senator Barbershop" showcases an
-                impressive gallery
-                of their outstanding work, allowing visitors to appreciate their talent and attention to detail. The
-                platform's
-                intuitive booking system creates a hassle-free experience, enabling customers to easily schedule
-                appointments and select
-                their preferred services. Through its visually captivating design and impressive functionality, "Senator
-                Barbershop"
-                serves as a captivating showcase of the modern barbershop experience.</p>
+            <div class="col-3 mob_off"></div>
+            <div class="col-6  mob_on justify-content-end align-items-center d-flex">
+              <p>"Ekfood" is a carefully developed design layout and website for a well-known company specializing in dairy products. The
+              website design reflects the company's core values, emphasizes transparency and demonstrates the excellent quality of the
+              dairy products offered. Within the site, we tried to give visitors a complete picture of the company itself, telling
+              about its history, mission and values. In addition, we have given considerable space to detailed information about the
+              wide range of exceptional dairy products offered by the company. This site serves as a gateway for customers to the
+              world of dairy excellence that Ekfood is proud to represent.</p>
             </div>
-            <div class="col-4 mob_off"></div>
+            <div class="col-3 mob_off"></div>
 
           </div>
           </div>
@@ -241,45 +220,38 @@
                 <h2>TASKS</h2>
               </div>
               <div class="col-8 info mob_on_full">
-                <ol>
-                  <li>
-                    Enhance User Experience (UX):
-                    <ul><br>
-                      <li>Enhance the intuitiveness and user-friendliness of navigation, enabling swift information retrieval
-                        for users.
-                        Improve the interaction with website elements to boost usability and minimize the occurrence of errors.
-                        Ensure rapid page loading and a seamless interface performance to amplify user satisfaction.</li><br>
-                      <li>Craft an Appealing and Contemporary User Interface (UI):
-                        Design a website interface that exudes style and aesthetic allure, aligning perfectly with the premium
-                        Model Kiev
-                        identity.
-                        Incorporate contemporary design trends and elements to forge a distinct and unforgettable website
-                        visual.</li>
-                    </ul>
-                  </li><br>
-                  <li>
-                    Boost Conversion Rates:
-                    <ul><br>
-                      <li>Strategize page layouts based on conversion-centric design principles, aiming to optimize successful
-                        user interactions
-                        such as orders, inquiries, and subscriptions.
-                        Reinforce visually captivating elements that seize attention and motivate users to undertake desired
-                        actions.</li>
-                    </ul>
-                  </li><br>
-                  <li>
-                    Seamless Multichannel Experience:
-                    <ul><br>
-                      <li>Design a responsive and consistent user interface across various devices, ensuring a seamless
-                        experience from desktop to
-                        mobile.</li>
-                    </ul>
+            <ol><br>
+              <li>
+                User experience (UX) design:
+                <ul>
+                  <li>Develop intuitive and user-friendly navigation that provides the user with quick access to the information
+                    they need.</li>
+                </ul>
+              </li><br>
+              <li>
+                Create an attractive and modern user interface (UI):
+                <ul>
+                  <li>Utilize current design trends and elements to create a unique and memorable look and feel for the site.</li>
+                </ul>
+              </li><br>
+              <li>
+                Showcase and product information:
+                <ul>
+                  <li>Create a compact and user-friendly storefront that showcases all of the company's products</li>
+                </ul>
+              </li><br>
+              <li>
+                Optimization for all possible devices:
+                <ul>
+                  <li>Develop a design that will be usable on both PC and mobile devices.
                   </li>
-                </ol>
+                </ul>
+              </li>
+            </ol>
+          </div>
               </div>
             </div>
           </div>
-        </div>
         <div class="memoji_target">
           <div class="container">
             <div class="row">
@@ -289,9 +261,9 @@
             </div>
             <div class="row">
               <div class="col-6 mob_on_full">
-                <p>Owners of modern mobile devices (probably aged 18-40) who are interested in quality and stylish accessories
-                  for their
-                  devices. Special attention is paid to people who actively use their phones and seek individuality in design.
+                <p>People who are actively interested in product questions, aged 12 to 50, with access to modern mobile devices. Special
+                attention is paid to those who are looking for detailed information about the product. The main goal is to raise brand
+                awareness.
                 </p>
               </div>
             </div>
@@ -377,7 +349,8 @@
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-9 mob_on_full">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas incidunt voluptas in saepe unde, iure a nemo eveniet mollitia aliquam. Cumque accusamus molestiae amet autem quae in ipsa, reprehenderit culpa.</p>
+                <p>The most important and valuable information that may be of interest to potential visitors is written. We have made sure
+                that every important detail is easily accessible and understandable.</p>
               </div>
             </div>
           </div>
@@ -504,8 +477,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230905113706"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230905113706"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230907130302"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230907130302"></script> -->
 
 
 
@@ -516,16 +489,16 @@
 
 
 
-<script src="files/script /swup.js?_v=20230905113706"></script>
-<script src="files/script /fast-image-zoom.js?_v=20230905113706"></script>
+<script src="files/script /swup.js?_v=20230907130302"></script>
+<script src="files/script /fast-image-zoom.js?_v=20230907130302"></script>
 
-<script src="files/script /tilt.js?_v=20230905113706"></script>
-<script type="module" src="files/script /script.js?_v=20230905113706"></script>
+<script src="files/script /tilt.js?_v=20230907130302"></script>
+<script type="module" src="files/script /script.js?_v=20230907130302"></script>
 
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230905113706"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230907130302"
                 integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
                 crossorigin="anonymous"></script>
 </footer>
