--- a/index6.html
+++ b/index6.html
@@ -4,26 +4,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230905113706"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230905113706"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@3?_v=20230905113706"></script>
-  <script src="https://unpkg.com/@swup/overlay-theme@2?_v=20230905113706"></script>
-  <script src="https://unpkg.com/@swup/fade-theme@2?_v=20230905113706"></script>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230907130302"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230907130302"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@3?_v=20230907130302"></script>
+  <script src="https://unpkg.com/@swup/fade-theme@2?_v=20230907130302"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230905113706"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230907130302"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
-  href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300;600;700&family=Italiana&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230905113706"
+  href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300;600;700&family=Italiana&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230907130302"
   rel="stylesheet">
 
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230905113706">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230907130302">
 
-  <link rel="stylesheet" href="css/style.min.css?_v=20230905113706"></link>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230907130302"></link>
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230905113706" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230907130302" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     
   
   <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
@@ -82,8 +81,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230905113706" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230905113706"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230907130302" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230907130302"></script> -->
 
 <body style="background-color: rgb(28, 28, 28)">
   <main id="swup" class="transition-fade">
@@ -226,14 +225,14 @@
           <div class="container">
           <div class="row justify-content-end align-items-center d-flex">
             <h2>About</h2>
-            <div class="col-4 mob_off"></div>
-            <div class="col-4  mob_on justify-content-end align-items-center d-flex">
+            <div class="col-3 mob_off"></div>
+            <div class="col-6  mob_on justify-content-end align-items-center d-flex">
               <p>"Accessory Hub" is an impressive web design endeavor dedicated to showcasing a vibrant and user-friendly interface for
               the ultimate destination of phone accessories. This project aims to provide a seamless and immersive online experience
               for potential customers seeking top-quality accessories to enhance their phone usage. Serving as a demonstration,
               "Accessory Hub" exemplifies the captivating appearance and functionality of the service.</p>
             </div>
-            <div class="col-4 mob_off"></div>
+            <div class="col-3 mob_off"></div>
 
           </div>
           </div>
@@ -290,10 +289,8 @@
               </div>
               <div class="row">
                 <div class="col-6 mob_on_full">
-                  <p>The target audience for Friesa includes movie enthusiasts and social media-savvy individuals who are looking for a
-                  premium online cinema experience. This demographic comprises tech-savvy users aged 18-40, with an affinity for
-                  high-quality films and a desire to engage in a social community centered around movies. Friesa's target audience values
-                  convenience, aesthetics, and the ability to connect and share their cinematic interests with others.</p>
+                  <p>Owners of modern mobile devices (probably aged 18-40) who are interested in quality and stylish accessories for their
+                  devices. Special attention is paid to people who actively use their phones and seek individuality in design.</p>
                 </div>
               </div>
             </div>
@@ -311,12 +308,8 @@
               <div class="row justify-content-center">
                 <div class="col-2"></div>
                 <div style="color: #866447;   text-align: justify;" class="col-7">
-                  <h3> The Aston Martin website design showcases a host of advantages that elevate the user's browsing
-                    experience and
-                    exemplify
-                    the brand's elegance and performance. With a focus on user experience (UX) and user interface (UI)
-                    design, this
-                    captivating website boasts a range of features that set it apart from the rest.</h3>
+                  <h3> The page is structured in such a way that the user cannot navigate to other pages, preventing them from getting
+                  distracted and ensuring sales.</h3>
                 </div>
                 <div class="col-2"></div>
               </div>
@@ -422,8 +415,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230905113706"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230905113706"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230907130302"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230907130302"></script> -->
 
 
 
@@ -434,16 +427,16 @@
 
 
 
-<script src="files/script /swup.js?_v=20230905113706"></script>
-<script src="files/script /fast-image-zoom.js?_v=20230905113706"></script>
+<script src="files/script /swup.js?_v=20230907130302"></script>
+<script src="files/script /fast-image-zoom.js?_v=20230907130302"></script>
 
-<script src="files/script /tilt.js?_v=20230905113706"></script>
-<script type="module" src="files/script /script.js?_v=20230905113706"></script>
+<script src="files/script /tilt.js?_v=20230907130302"></script>
+<script type="module" src="files/script /script.js?_v=20230907130302"></script>
 
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230905113706"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230907130302"
                 integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
                 crossorigin="anonymous"></script>
 </footer>
