--- a/index8.html
+++ b/index8.html
@@ -219,8 +219,15 @@
             <h2>About</h2>
             <div class="col-3 mob_off"></div>
             <div class="col-6  mob_on justify-content-end align-items-center d-flex">
-              <p>"Fybrid Studio" is an elaborated design layout for a web studio. Aimed at demonstrating the capabilities and services of
-              the studio, it showcases our unique fusion of creativity and technical expertise.</p>
+              <p>"Senator Barbershop" is a great web project dedicated to the barbershop. With its sleek
+                  and user-friendly interface, this website aims to provide a seamless and convenient platform for booking
+                  barber services. Emphasizing the artistry and skill of its barbers, "Senator Barbershop" showcases an impressive
+                  gallery
+                  of their outstanding work, allowing visitors to appreciate their talent and attention to detail. The platform's
+                  intuitive booking system creates a hassle-free experience, enabling customers to easily schedule appointments and
+                  select
+                  their preferred services. Through its visually captivating design and impressive functionality, "Senator Barbershop"
+                  serves as a captivating showcase of the modern barbershop experience.</p>
             </div>
             <div class="col-3 mob_off"></div>
 
