--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
               <div class="row row_info_main anim-pic">
                 <div class="col-6">
                   <h2>FRIESA</h2>
+                  <h4>webmovie</h4>
                 </div>
                 <div class="col-4">
                   <a href="index3.html">
