--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230909135036">
 
-  <link rel="stylesheet" href="css/style.min.css?_v=20230909135036"></link>
+  <link rel="stylesheet" href="css/style.css"></link>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230909135036" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     
@@ -104,7 +104,7 @@
               <div class="row row_info_main anim-pic">
                 <div class="col-6">
                   <h2>FRIESA</h2>
-                  <h4>webmovie</h4>
+                  <h5>webmovie</h5>
                 </div>
                 <div class="col-4">
                   <a href="index3.html">
@@ -134,6 +134,7 @@
               <div class="row row_info_main anim-pic">
                 <div class="col-6">
                   <h2>ASTON</h2>
+                  <h5>carshop</h5>
                 </div>
                 <div class="col-4">
                   <a href="index4.html">
@@ -163,6 +164,7 @@
               <div class="row row_info_main anim-pic">
                 <div class="col-6">
                   <h2>MEMOJI</h2>
+                  <h5>landing shop</h5>
                 </div>
                 <div class="col-4">
                   <a href="index5.html">
@@ -189,6 +191,7 @@
               <div class="row row_info_main">
                 <div class="col-6">
                   <h2>ACCESSORY</h2>
+                  <h5>landing shop</h5>
                 </div>
                 <div class="col-4">
                   <a href="index6.html">
@@ -215,6 +218,7 @@
               <div class="row row_info_main">
                 <div class="col-6">
                   <h2>MODEL</h2>
+                  <h5>model site</h5>
                 </div>
                 <div class="col-4">
                   <a href="index7.html">
@@ -241,6 +245,7 @@
               <div class="row row_info_main">
                 <div class="col-6">
                   <h2>SENATOR</h2>
+                  <h5>barbershop</h5>
                 </div>
                 <div class="col-4">
                   <a href="index8.html">
@@ -267,6 +272,7 @@
               <div class="row row_info_main">
                 <div class="col-6">
                   <h2>FYBRID</h2>
+                  <h5>web studio</h5>
                 </div>
                 <div class="col-4">
                   <a href="index9.html">
@@ -293,6 +299,7 @@
               <div class="row row_info_main">
                 <div class="col-6">
                   <h2>RIAL UST</h2>
+                  <h5>lawyer site</h5>
                 </div>
                 <div class="col-4">
                   <a href="index10.html">
@@ -319,6 +326,7 @@
               <div class="row row_info_main">
                 <div class="col-6">
                   <h2>EKFOOD</h2>
+                  <h5>business site</h5>
                 </div>
                 <div class="col-4">
                   <a href="index11.html">
@@ -345,6 +353,7 @@
               <div class="row row_info_main">
                 <div class="col-6">
                   <h2>DRDOOGY</h2>
+                  <h5>webshop</h5>
                 </div>
                 <div class="col-4">
                   <a href="index12.html">
