--- a/index13.html
+++ b/index13.html
@@ -197,8 +197,9 @@
             <h2>About</h2>
             <div class="col-3 mob_off"></div>
             <div class="col-6  mob_on justify-content-end align-items-center d-flex">
-              <p>"Drdoggy" is a created visual concept of the main page, pet store. It is designed to demonstrate the possibilities of
-              the designer. Chastically selected colors and developed the structure of the landing page</p>
+              <p>"The Academy is a project designed to attract users to our course and increase conversion rates. We've created 10 screens
+              that combine visual appeal and informative content to deliver a compelling user experience. The color scheme was
+              carefully chosen to evoke associations with wealth, tranquility, and monkeys.</p>
             </div>
             <div class="col-3 mob_off"></div>
 
@@ -224,7 +225,7 @@
                     Creating an attractive and modern user interface (UI):
                     <ul><br>
                     <li>
-                      Develop a website UI that is stylish and aesthetically pleasing and perfectly aligned with Drdoggy's brand identity.
+                      Develop a website UI that is stylish and aesthetically pleasing and perfectly aligned with Academy brand identity.
                       Utilizing modern design trends and elements allowed us to create an original and unforgettable visual identity for the
                       site.</li>
                     </ul>
@@ -256,8 +257,12 @@
             </div>
             <div class="row">
               <div class="col-6 mob_on_full">
-                <p>Owners of different types of pets (probably aged 12-50) who are interested in quality and stylish accessories for their
-                pets. Special consideration is given to people who are actively concerned about their pet's health and style
+                <p>This course is geared towards individuals between the ages of 20 and 35 who are driven to enhance their financial
+                situation and yearn for the flexibility of remote work.
+                
+                We're targeting those who are actively seeking ways to break free from traditional office settings and embrace the
+                freedom of location-independent work. This includes individuals who are passionate about personal growth, financial
+                independence, and the ability to design a lifestyle that aligns with their values and aspirations.
                 </p>
               </div>
             </div>
