--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
               </a>
               <div class="row row_info_main">
                 <div class="col-6">
-                  <h2>MODEL</h2>
-                  <h5>model site</h5>
+                  <h2>Autoimporter</h2>
+                  <h5>carshop</h5>
                 </div>
                 <div class="col-4">
                   <a href="index7.html">
