--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
           <div class="row justify-content-center w-6">
             <div class="col-10 position-relative block_main_home">
               <a href="index7.html">
-                <picture><source srcset="img/model_ipad.webp" type="image/webp"><img id="img_main_5" class="mobile_pic" src="img/model_ipad.jpg" alt=""></picture>
+                <picture><source srcset="img/Landing_avto.webp" type="image/webp"><img id="img_main_5" class="mobile_pic" src="img/Landing_avto.jpg" alt=""></picture>
               </a>
               <div class="row row_info_main">
                 <div class="col-6">
@@ -272,7 +272,7 @@
           <div class="row justify-content-center w-7">
             <div class="col-10 position-relative block_main_home">
               <a href="index7.html">
-                <picture><source srcset="img/model_ipad.webp" type="image/webp"><img id="img_main_5" class="mobile_pic" src="img/model_ipad.jpg" alt=""></picture>
+                <picture><source srcset="img/model_ipad.webp" type="image/webp"><img id="img_main_6" class="mobile_pic" src="img/model_ipad.jpg" alt=""></picture>
               </a>
               <div class="row row_info_main">
                 <div class="col-6">
@@ -299,7 +299,7 @@
           <div class="row justify-content-center w-8">
             <div class="col-10 position-relative block_main_home">
               <a href="index8.html">
-                <picture><source srcset="img/senator_main.webp" type="image/webp"><img id="img_main_6" class="mobile_pic" src="img/senator_main.jpg" alt=""></picture>
+                <picture><source srcset="img/senator_main.webp" type="image/webp"><img id="img_main_7" class="mobile_pic" src="img/senator_main.jpg" alt=""></picture>
               </a>
               <div class="row row_info_main">
                 <div class="col-6">
@@ -326,7 +326,7 @@
           <div class="row justify-content-center w-9">
             <div class="col-10 position-relative block_main_home">
               <a href="index9.html">
-                <picture><source srcset="img/fybridS_main_2.webp" type="image/webp"><img id="img_main_7" class="mobile_pic" src="img/fybridS_main_2.jpg" alt=""></picture>
+                <picture><source srcset="img/fybridS_main_2.webp" type="image/webp"><img id="img_main_8" class="mobile_pic" src="img/fybridS_main_2.jpg" alt=""></picture>
               </a>
               <div class="row row_info_main">
                 <div class="col-6">
@@ -353,7 +353,7 @@
           <div class="row justify-content-center w-10">
             <div class="col-10 position-relative block_main_home">
               <a href="index10.html">
-                <picture><source srcset="img/rialust_main.webp" type="image/webp"><img id="img_main_8" class="mobile_pic" src="img/rialust_main.jpg" alt=""></picture>
+                <picture><source srcset="img/rialust_main.webp" type="image/webp"><img id="img_main_9" class="mobile_pic" src="img/rialust_main.jpg" alt=""></picture>
               </a>
               <div class="row row_info_main">
                 <div class="col-6">
@@ -380,7 +380,7 @@
           <div class="row justify-content-center w-11">
             <div class="col-10 position-relative block_main_home">
               <a href="index11.html">
-                <picture><source srcset="img/ekfood_main.webp" type="image/webp"><img id="img_main_9" class="mobile_pic" src="img/ekfood_main.jpg" alt=""></picture>
+                <picture><source srcset="img/ekfood_main.webp" type="image/webp"><img id="img_main_10" class="mobile_pic" src="img/ekfood_main.jpg" alt=""></picture>
               </a>
               <div class="row row_info_main">
                 <div class="col-6">
@@ -407,7 +407,7 @@
           <div class="row justify-content-center w-12">
             <div class="col-10 position-relative block_main_home">
               <a href="index12.html">
-                <picture><source srcset="img/dr.doogy.webp" type="image/webp"><img id="img_main_10" class="mobile_pic" src="img/dr.doogy.jpg" alt=""></picture>
+                <picture><source srcset="img/dr.doogy.webp" type="image/webp"><img id="img_main_11" class="mobile_pic" src="img/dr.doogy.jpg" alt=""></picture>
               </a>
               <div class="row row_info_main">
                 <div class="col-6">
