--- a/index14.html
+++ b/index14.html
@@ -108,7 +108,7 @@
           </div>
           <div class="info_gradient"></div>
           <div id="imgbox" class="imgbox imgbox_course">
-            <picture><img class="img_back_main"  src="img/course_main.jpg" alt=""></picture>
+            <picture><img class="img_back_main"  src="img/avto_main.jpg" alt=""></picture>
             <div class="lds-dual-ring"></div>
           </div>
         </div>
