--- a/index14.html
+++ b/index14.html
@@ -107,7 +107,7 @@
             </div>
           </div>
           <div class="info_gradient"></div>
-          <div id="imgbox" class="imgbox imgbox_course">
+          <div id="imgbox" class="imgbox imgbox_avto">
             <picture><img class="img_back_main"  src="img/avto_main.jpg" alt=""></picture>
             <div class="lds-dual-ring"></div>
           </div>
