--- a/index14.html
+++ b/index14.html
@@ -130,13 +130,13 @@
             <div class="carousel-item active">
               <div class="row justify-content-center">
                 <div class="col-3">
-                  <picture><source srcset="img/Drdoggy_post_1.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/course_img_1.jpg" alt="ASTON"></picture>
+                  <picture><source srcset="img/Drdoggy_post_1.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/avto_img_1.jpg" alt="ASTON"></picture>
                 </div>
                 <div class="col-3">
-                  <picture><source srcset="img/Drdoggy_post_2.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/course_img_2.jpg" alt="ASTON"></picture>
+                  <picture><source srcset="img/Drdoggy_post_2.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/avto_img_2.jpg" alt="ASTON"></picture>
                 </div>
                 <div class="col-3">
-                  <picture><source srcset="img/Drdoggy_post_3.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/course_img_3.jpg" alt="ASTON"></picture>
+                  <picture><source srcset="img/Drdoggy_post_3.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/avto_img_3.jpg" alt="ASTON"></picture>
                 </div>
               </div>
             </div>
