--- a/index14.html
+++ b/index14.html
@@ -143,13 +143,13 @@
             <div class="carousel-item">
               <div class="row justify-content-center">
                 <div class="col-3">
-                  <picture><source srcset="img/Drdoggy_post_4.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/course_img_4.jpg" alt="ASTON"></picture>
+                  <picture><source srcset="img/avto_img_4.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/avto_img_4.jpg" alt="ASTON"></picture>
                 </div>
                 <div class="col-3">
-                  <picture><source srcset="img/Drdoggy_post_5.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/course_img_5.jpg" alt="ASTON"></picture>
+                  <picture><source srcset="img/avto_img_5.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/avto_img_5.jpg" alt="ASTON"></picture>
                 </div>
                 <div class="col-3">
-                  <picture><source srcset="img/Drdoggy_post_6.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/course_img_6.jpg" alt="ASTON"></picture>
+                  <picture><source srcset="img/avto_img_6.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/avto_img_6.jpg" alt="ASTON"></picture>
                 </div>
               </div>
             </div>
