--- a/index14.html
+++ b/index14.html
@@ -275,7 +275,7 @@
             </div>
           </div>
         </div>
-        <div style="padding-bottom: 0px;" class="pg-1_bk_2 pg-1_bk_2_course ">
+        <div style="padding-bottom: 0px;" class="pg-1_bk_2 pg-1_bk_2_avto ">
 
           <div class="container text_plus_2">
             <div style="padding-bottom: 0px;" class="row justify-content-center">
