--- a/index14.html
+++ b/index14.html
@@ -286,7 +286,7 @@
               </div>
               <div style="padding-bottom: 0px;" class="row">
                 <div class="col-12">
-                  <picture><img  id="img_back_DR_4" style="margin-bottom: 0px; border-radius: 0px;" width="100%" src="img/course_macbook.png" alt=""></picture>
+                  <picture><img  id="img_back_DR_4" style="margin-bottom: 0px; border-radius: 0px;" width="100%" src="img/avto_macbook.png" alt=""></picture>
                 </div>
               </div>
             </div>
