--- a/index14.html
+++ b/index14.html
@@ -164,29 +164,29 @@
           </button>
         </div>
           <div class="mobile-carusel" id="gallery-img">
-            <a style="margin-left: 10vw;" href="img/course_mobile_1.jpg" data-pswp-width="638" data-pswp-height="956"
+            <a style="margin-left: 10vw;" href="img/avto_mobile_1.jpg" data-pswp-width="638" data-pswp-height="956"
               target="_blank" class="mobile-carusel-item">
-              <picture><img width="100%" class="mobile-carusel-item-img" src="img/course_mobile_1.jpg" alt=''></picture>
+              <picture><img width="100%" class="mobile-carusel-item-img" src="img/avto_mobile_1.jpg" alt=''></picture>
             </a>
-            <a href="img/course_mobile_2.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank"
+            <a href="img/avto_mobile_2.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank"
               class="mobile-carusel-item">
-              <picture><img width="100%" class="mobile-carusel-item-img" src="img/course_mobile_2.jpg" alt=''></picture>
+              <picture><img width="100%" class="mobile-carusel-item-img" src="img/avto_mobile_2.jpg" alt=''></picture>
             </a>
-            <a href="img/course_mobile_3.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank"
+            <a href="img/avto_mobile_3.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank"
               class="mobile-carusel-item">
-              <picture><img width="100%" class="mobile-carusel-item-img" src="img/course_mobile_3.jpg" alt=''></picture>
+              <picture><img width="100%" class="mobile-carusel-item-img" src="img/avto_mobile_3.jpg" alt=''></picture>
             </a>
-            <a href="img/course_mobile_4.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank"
+            <a href="img/avto_mobile_4.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank"
               class="mobile-carusel-item">
-              <picture><img width="100%" class="mobile-carusel-item-img" src="img/course_mobile_4.jpg" alt=''></picture>
+              <picture><img width="100%" class="mobile-carusel-item-img" src="img/avto_mobile_4.jpg" alt=''></picture>
             </a>
-            <a href="img/course_mobile_5.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank"
+            <a href="img/avto_mobile_5.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank"
               class="mobile-carusel-item">
-              <picture><img width="100%" class="mobile-carusel-item-img" src="img/course_mobile_5.jpg" alt=''></picture>
+              <picture><img width="100%" class="mobile-carusel-item-img" src="img/avto_mobile_5.jpg" alt=''></picture>
             </a>
-            <a style="margin-right: 10vw;" href="img/course_mobile_6.jpg" data-pswp-width="638" data-pswp-height="956"
+            <a style="margin-right: 10vw;" href="img/avto_mobile_6.jpg" data-pswp-width="638" data-pswp-height="956"
               target="_blank" class="mobile-carusel-item">
-              <picture><img width="100%" class="mobile-carusel-item-img" src="img/course_mobile_6.jpg" alt=''></picture>
+              <picture><img width="100%" class="mobile-carusel-item-img" src="img/avto_mobile_6.jpg" alt=''></picture>
             </a>
         
         
