--- a/index14.html
+++ b/index14.html
@@ -319,7 +319,7 @@
             </div>
           </div>
         </div>
-        <div class="friesa_mob">
+        <div class="friesa_mob avto_mob">
           <div class="container">
             <div class="row">
               <div style="display: flex;" class="col-6 justify-content-center align-items-center mob_off">
@@ -343,7 +343,7 @@
                 </div>
               </div>
               <div class="col-4 mob_on2">
-                <picture><source srcset="img/friesa_iphone.webp" type="image/webp"><img width="100%" src="img/friesa_iphone.jpg" alt=""></picture>
+                <picture><source srcset="img/avto_iphone.webp" type="image/webp"><img width="100%" src="img/avto_iphone.jpg" alt=""></picture>
               </div>
             </div>
             <div class="row text_plus">
