--- a/index14.html
+++ b/index14.html
@@ -340,7 +340,7 @@
                 <picture><source srcset="img/avto_iphone.webp" type="image/webp"><img width="100%" src="img/avto_iphone.jpg" alt=""></picture>
               </div>
             </div>
-            <div class="row text_plus">
+            <div class="row text_plus avto_text">
               <div class="col-6 mob_on">
                 <h3>- User-friendly interface: The web design for our online cinema is designed with ease-of-use in mind. Our interface is
                 intuitive and simple, allowing users to easily navigate the site and find the movies they want to watch.</h3>
