--- a/index14.html
+++ b/index14.html
@@ -304,17 +304,17 @@
               </svg>
             </div>
             <div class="col-9" id="gallery-img">
-              <picture></picture><img width="100%" class="carousel_img des_off" id="img_back_AS_2" src="img/course_img_7.jpg" alt="ASTON"></picture>
-              <a href="img/course_img_7.jpg" data-pswp-width="1784" data-pswp-height="890" target="_blank" class="mobs_off">
-                <picture><img width="100%" class="mobile-carusel-item-img" src="img/course_img_7.jpg" alt=''></picture>
+              <picture></picture><img width="100%" class="carousel_img des_off" id="img_back_AS_2" src="img/avto_img_1.jpg" alt="ASTON"></picture>
+              <a href="img/avto_img_1.jpg" data-pswp-width="1784" data-pswp-height="890" target="_blank" class="mobs_off">
+                <picture><img width="100%" class="mobile-carusel-item-img" src="img/avto_img_1.jpg" alt=''></picture>
               </a>
             </div>
             <div class="col-3"></div>
             <div class="col-3"></div>
             <div class="col-9" id="gallery-img">
-              <picture><img width="100%" class="carousel_img des_off" id="img_back_AS_2" src="img/course_img_8.jpg" alt="ASTON"></picture>
-              <a href="img/course_img_8.jpg" data-pswp-width="1784" data-pswp-height="890" target="_blank" class="mobs_off">
-                <picture><img width="100%" class="mobile-carusel-item-img" src="img/course_img_8.jpg" alt=''></picture>
+              <picture><img width="100%" class="carousel_img des_off" id="img_back_AS_2" src="img/avto_img_3.jpg" alt="ASTON"></picture>
+              <a href="img/avto_img_3.jpg" data-pswp-width="1784" data-pswp-height="890" target="_blank" class="mobs_off">
+                <picture><img width="100%" class="mobile-carusel-item-img" src="img/avto_img_3.jpg" alt=''></picture>
               </a>
             </div>
           </div>
