--- a/index14.html
+++ b/index14.html
@@ -312,9 +312,9 @@
             <div class="col-3"></div>
             <div class="col-3"></div>
             <div class="col-9" id="gallery-img">
-              <picture><img width="100%" class="carousel_img des_off" id="img_back_AS_2" src="img/avto_img_3.jpg" alt="ASTON"></picture>
-              <a href="img/avto_img_3.jpg" data-pswp-width="1784" data-pswp-height="890" target="_blank" class="mobs_off">
-                <picture><img width="100%" class="mobile-carusel-item-img" src="img/avto_img_3.jpg" alt=''></picture>
+              <picture><img width="100%" class="carousel_img des_off" id="img_back_AS_2" src="img/avto_img_2.jpg" alt="ASTON"></picture>
+              <a href="img/avto_img_2.jpg" data-pswp-width="1784" data-pswp-height="890" target="_blank" class="mobs_off">
+                <picture><img width="100%" class="mobile-carusel-item-img" src="img/avto_img_2.jpg" alt=''></picture>
               </a>
             </div>
           </div>
@@ -324,8 +324,8 @@
             <div class="row">
               <div style="display: flex;" class="col-6 justify-content-center align-items-center mob_off">
                 <div class="row">
-        <div class="col-10 d-flex justify-content-end">
-          <svg width="53" height="53" viewBox="0 0 53 53" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <div class="col-12 d-flex justify-content-end">
+          <svg width="200" height="200" viewBox="0 0 53 53" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M41.075 0H11.925C5.339 0 0 5.339 0 11.925V41.075C0 47.661 5.339 53 11.925 53H41.075C47.661 53 53 47.661 53 41.075V11.925C53 5.339 47.661 0 41.075 0Z" fill="black"/>
             <path d="M41.87 42.0354L34.1955 28.7524H26.5L34.2539 42.1349L41.87 42.0354Z" fill="#FFD211"/>
             <path d="M30.2102 22.2431L26.2618 15.635L10.8652 42.0025H18.6032L30.2102 22.2431Z" fill="white"/>
@@ -339,7 +339,7 @@
                 <picture><source srcset="img/avto_iphone.webp" type="image/webp"><img width="100%" src="img/avto_iphone.jpg" alt=""></picture>
               </div>
             </div>
-            <div class="row text_plus avto">
+            <div class="row text_plus avto_text">
               <div class="col-6 mob_on">
                 <h3>- User-friendly interface: The web design for our online cinema is designed with ease-of-use in mind. Our interface is
                 intuitive and simple, allowing users to easily navigate the site and find the movies they want to watch.</h3>
