--- a/index14.html
+++ b/index14.html
@@ -376,12 +376,12 @@
                 <h3>#000000</h3>
               </div>
               <div class="col-4 color_bl_2 bl_style"
-                style="background-color: #35D1FC; border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
-                <h3>#35D1FC</h3>
+                style="background-color: #dec500; border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
+                <h3>#dec500</h3>
               </div>
               <div class="col-4 color_bl_3 bl_style "
-                style="background-color: #35FCA4; border-right: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color); border-top: solid black 2px; border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
-                <h3 style="color: rgb(66, 66, 66);">#35FCA4</h3>
+                style="background-color: #428bdb; border-right: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color); border-top: solid black 2px; border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
+                <h3 style="color:#428bdb">#428bdb</h3>
               </div>
               <div class="fonts_box_back">
                 <div class="fonts_box">
