--- a/index14.html
+++ b/index14.html
@@ -325,12 +325,20 @@
               <div style="display: flex;" class="col-6 justify-content-center align-items-center mob_off">
                 <div class="row">
         <div class="col-12 d-flex justify-content-end">
-          <svg width="200" height="200" viewBox="0 0 53 53" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M41.075 0H11.925C5.339 0 0 5.339 0 11.925V41.075C0 47.661 5.339 53 11.925 53H41.075C47.661 53 53 47.661 53 41.075V11.925C53 5.339 47.661 0 41.075 0Z" fill="black"/>
-            <path d="M41.87 42.0354L34.1955 28.7524H26.5L34.2539 42.1349L41.87 42.0354Z" fill="#FFD211"/>
-            <path d="M30.2102 22.2431L26.2618 15.635L10.8652 42.0025H18.6032L30.2102 22.2431Z" fill="white"/>
-            <path d="M38.0272 8.87744H30.1515L26.3672 15.5024L33.9101 15.4655L38.0272 8.87744Z" fill="white"/>
-            </svg>
+          <svg width="40%" height="40%" viewBox="0 0 4521 4468" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M607.76 2340C607.76 2308.8 633.056 2283.5 664.26 2283.5C695.464 2283.5 720.76 2308.8 720.76 2340L607.76 2340ZM664.26 2537.44L607.76 2537.44L664.26 2537.44ZM1834.26 3707.44L1834.26 3763.94L1834.26 3763.94L1834.26 3707.44ZM2228.67 3707.44L1663.67 4033.65L1663.67 3381.24L2228.67 3707.44ZM720.76 2340L720.76 2537.44L607.76 2537.44L607.76 2340L720.76 2340ZM720.76 2537.44C720.76 3152.41 1219.29 3650.94 1834.26 3650.94L1834.26 3763.94C1156.88 3763.94 607.76 3214.82 607.76 2537.44L720.76 2537.44Z"
+              fill="white" />
+            <path
+              d="M3912.59 2127.39C3912.59 2158.59 3887.29 2183.89 3856.09 2183.89C3824.88 2183.89 3799.59 2158.59 3799.59 2127.39L3912.59 2127.39ZM3856.09 1929.94L3912.59 1929.94L3856.09 1929.94ZM2686.09 759.94L2686.09 703.44L2686.09 703.44L2686.09 759.94ZM2291.68 759.94L2856.68 433.737L2856.68 1086.14L2291.68 759.94ZM3799.59 2127.39L3799.59 1929.94L3912.59 1929.94L3912.59 2127.39L3799.59 2127.39ZM3799.59 1929.94C3799.59 1314.97 3301.06 816.44 2686.09 816.44L2686.09 703.44C3363.47 703.44 3912.59 1252.56 3912.59 1929.94L3799.59 1929.94Z"
+              fill="white" />
+            <path fill-rule="evenodd" clip-rule="evenodd"
+              d="M850.447 1545.48C767.184 1628.75 767.184 1763.74 850.447 1847.01L2647.07 3643.63C2730.34 3726.89 2865.33 3726.89 2948.6 3643.63L3669.63 2922.6C3752.89 2839.33 3752.89 2704.34 3669.63 2621.07L1873.01 824.448C1789.74 741.185 1654.75 741.184 1571.48 824.448L850.447 1545.48ZM917.784 1577.07C851.963 1642.89 851.963 1749.6 917.783 1815.42L2678.06 3575.7C2743.88 3641.52 2850.6 3641.52 2916.42 3575.7L3601.1 2891.01C3666.92 2825.19 3666.92 2718.48 3601.1 2652.66L1840.83 892.38C1775.01 826.559 1668.29 826.559 1602.47 892.38L917.784 1577.07Z"
+              fill="white" stroke="black" stroke-width="41" />
+            <path
+              d="M1443.52 1225.06L1279.06 1389.52C1260.63 1407.95 1260.63 1437.83 1279.06 1456.26C1297.49 1474.69 1327.37 1474.69 1345.8 1456.26L1510.26 1291.8C1528.69 1273.37 1528.69 1243.49 1510.26 1225.06C1491.83 1206.63 1461.95 1206.63 1443.52 1225.06Z"
+              fill="white" stroke="black" stroke-width="11" />
+          </svg>
             
         </div>
                 </div>
@@ -364,7 +372,7 @@
           </div>
   </div>
         <div class="pg-1_bk_3">
-          <div style="margin-bottom: 200px;" class="container fonts_colors_con font_course">
+          <div style="margin-bottom: 200px;" class="container fonts_colors_con ">
             <div class="row">
               <div class="col-12 font-ek">
                 <h2>COLOR <span>&</span> TYPOGRAPHY</h2>
@@ -392,7 +400,7 @@
                   </div>
                   <div class="row">
                     <div class="col-12 main_font">
-                      <h3>Gilroy</h3>
+                      <h3>Roboto</h3>
                     </div>
                     <div class="col-12 font_letter">
                       <h4>
@@ -404,12 +412,12 @@
                     </div>
                   </div>
                   <div class="row color_site_box">
-                    <div class="col-5 color_site color_bl_5" style="background-color: #35D1FC;">
-                      <h3>#35D1FC</h3>
+                    <div class="col-5 color_site color_bl_5" style="background-color: #009900;">
+                      <h3>#009900</h3>
                     </div>
-                    <div class="col-5 color_site color_bl_4" style="background-color: #F31951;">
+                    <!-- <div class="col-5 color_site color_bl_4" style="background-color: #F31951;">
                       <h3>#F31951</h3>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
@@ -422,16 +430,17 @@
               <div class="row justify-content-center w-2">
                 <div class="col-10 position-relative">
                   <h3 class="text-center">Next Project</h3>
-                  <a href="index3.html">
-                    <picture><source srcset="img/red_friesa.webp" type="image/webp"><img id="img_main_10" class="mobile_pic" src="img/red_friesa.jpg" alt=""></picture>
+                  <a href="index7.html">
+                    <picture><source srcset="img/Landing_avto.webp" type="image/webp"><img id="img_main_5" class="mobile_pic" src="img/Landing_avto.jpg" alt=""></picture>
                   </a>
                   <div class="row row_info_main">
                     <div class="col-6">
-                      <h2>FRIESA</h2>
+                      <h2>Autoimporter</h2>
                     </div>
                     <div class="col-4">
-                      <a href="index3.html">
-                        <svg width="40%" height="40%" viewBox="0 0 30 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <a href="index7.html">
+                        <svg width="40%" height="40%" viewBox="0 0 30 16" fill="none"
+                          xmlns="http://www.w3.org/2000/svg">
                           <path
                             d="M29.7071 8.7071C30.0976 8.31658 30.0976 7.68341 29.7071 7.29289L23.3431 0.92893C22.9526 0.538405 22.3195 0.538405 21.9289 0.92893C21.5384 1.31945 21.5384 1.95262 21.9289 2.34314L27.5858 8L21.9289 13.6569C21.5384 14.0474 21.5384 14.6805 21.9289 15.0711C22.3195 15.4616 22.9526 15.4616 23.3431 15.0711L29.7071 8.7071ZM1.11539e-07 9L29 9L29 7L-1.11539e-07 7L1.11539e-07 9Z"
                             fill="white" />
@@ -442,7 +451,7 @@
                 </div>
                 <div class="back_blur">
                   <div class="position-relative">
-                    <span class="blur_obj"></span>
+                    <span class="blur_obj blur_obj_model"></span>
                   </div>
                 </div>
               </div>
