--- a/index14.html
+++ b/index14.html
@@ -415,9 +415,9 @@
                     <div class="col-5 color_site color_bl_5" style="background-color: #009900;">
                       <h3>#009900</h3>
                     </div>
-                    <!-- <div class="col-5 color_site color_bl_4" style="background-color: #F31951;">
+                    <div class="col-5 color_site color_bl_4" style="background-color: #428bdb;">
                       <h3>#F31951</h3>
-                    </div> -->
+                    </div>
                   </div>
                 </div>
               </div>
@@ -431,14 +431,14 @@
                 <div class="col-10 position-relative">
                   <h3 class="text-center">Next Project</h3>
                   <a href="index7.html">
-                    <picture><source srcset="img/Landing_avto.webp" type="image/webp"><img id="img_main_5" class="mobile_pic" src="img/Landing_avto.jpg" alt=""></picture>
+                    <picture><source srcset="img/model_post_5.webp" type="image/webp"><img id="img_main_5" class="mobile_pic" src="img/model_post_5.jpg" alt=""></picture>
                   </a>
                   <div class="row row_info_main">
                     <div class="col-6">
-                      <h2>Autoimporter</h2>
+                      <h2>MODEL</h2>
                     </div>
                     <div class="col-4">
-                      <a href="index7.html">
+                      <a href="index14.html">
                         <svg width="40%" height="40%" viewBox="0 0 30 16" fill="none"
                           xmlns="http://www.w3.org/2000/svg">
                           <path
