--- a/index14.html
+++ b/index14.html
@@ -381,10 +381,10 @@
                 style="background-color: #dec500; border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
                 <h3>#dec500</h3>
               </div>
-              <div class="col-4 color_bl_3 bl_style "
-                style="background-color: #428bdb; border-right: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color); border-top: solid black 2px; border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
-                <h3 style="color:#428bdb">#428bdb</h3>
-              </div>
+              <div class="col-4 color_bl_3 bl_style"
+              style="background-color: #428bdb; border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
+              <h3>#428bdb</h3>
+            </div>
               <div class="fonts_box_back">
                 <div class="fonts_box">
                   <div class="row fonts_main_box">
@@ -409,8 +409,8 @@
                     <div class="col-5 color_site color_bl_4" style="background-color: #009900;">
                       <h3>#009900</h3>
                     </div>
-                    <div class="col-5 color_site color_bl_5" style="background-color: #428bdb;">
-                      <h3>#F31951</h3>
+                    <div class="col-5 color_site color_bl_5" style="background-color: #dec500;">
+                      <h3>#dec500</h3>
                     </div>
                   </div>
                 </div>
